--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeatBounce"
         tools:targetApi="31">
-        <activity
-            android:name=".Pembayaran2"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".Pembayaran2"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".Home"
             android:exported="false" />
         <activity
-            android:name=".Pembayaran1"
+            android:name=".Pembayaran2"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
