--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeatBounce"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".Pembayaran2"-->
-<!--            android:exported="false" />-->
-
-        <activity android:name=".BookingActivity"></activity>
         <activity
-            android:name=".Home"
+            android:name=".Detail.DetailActivity"/>
+
+        <activity
+            android:name=".PembayaranPilihJam.Pembayaran1Activity"
             android:exported="false" />
         <activity
-            android:name=".HomeActivity"
+            android:name=".PembayaranPilihJam.SelectedHoursActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PembayaranPilihJam.HourListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Home.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
