--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,16 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.16.1'
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.16.1'
 
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+
+    implementation 'androidx.appcompat:appcompat:1.6.0'
+    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+
 
 
 
