--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeatBounce"
         tools:targetApi="31">
-        <activity
-            android:name=".Detail.DetailActivity"/>
-
+<!--        <activity-->
+<!--            android:name=".HistoryActivity"-->
+<!--            android:exported="false" />-->
+        <activity android:name=".Detail.DetailActivity" />
         <activity
             android:name=".PembayaranPilihJam.Pembayaran1Activity"
             android:exported="false" />
@@ -24,7 +25,7 @@
             android:name=".PembayaranPilihJam.HourListActivity"
             android:exported="false" />
         <activity
-            android:name=".Home.HomeActivity"
+            android:name=".StudioPencarianActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
