--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeatBounce"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".HistoryActivity"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".History.HistoryActivity"
+            android:exported="false" />
         <activity android:name=".Detail.DetailActivity" />
         <activity
             android:name=".PembayaranPilihJam.Pembayaran1Activity"
