--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-hls:2.16.1'
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
 
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
