--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         tools:targetApi="31">
         <activity
             android:name=".Detail.DetailActivity"/>
+        <activity android:name=".Detail.GidDetailActivity"></activity>
 
         <activity
             android:name=".PembayaranPilihJam.Pembayaran1Activity"
