--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 //    glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 //    retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
