--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <activity
             android:name=".Detail.DetailActivity"/>
         <activity android:name=".Detail.GidDetailActivity"></activity>
+        <activity android:name=".Detail.ReviewActivity"></activity>
 
         <activity
             android:name=".PembayaranPilihJam.Pembayaran1Activity"
