--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BeatBounce"
+        android:theme="@style/Theme.Beatb"
         tools:targetApi="31">
-        <activity
-            android:name=".Login"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -23,6 +20,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RegisterActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".ChangePasswordActivity"
+            android:exported="true">
+        </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
 </manifest>
