--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BeatBounce"
         tools:targetApi="31">
-<!--        <activity-->
-<!--            android:name=".History.HistoryActivity"-->
-<!--            android:exported="false" />-->
+        <activity
+            android:name=".Login.ChangePasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Login.RegisterActivity"
+            android:exported="false" />
+        <activity
+
+            android:name=".Home.HomeActivity"
+            android:exported="false" /> <!-- <activity -->
+        <!-- android:name=".History.HistoryActivity" -->
+        <!-- android:exported="false" /> -->
         <activity android:name=".Detail.DetailActivity" />
         <activity
             android:name=".PembayaranPilihJam.Pembayaran1Activity"
@@ -34,14 +46,14 @@
             android:name=".History.HistoryActivity"
             android:exported="false" />
         <activity
-            android:name=".Home.HomeActivity"
+            android:name=".Login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
