--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
         <activity
             android:name=".Login.RegisterActivity"
             android:exported="false" />
-        <activity
+<!--        <activity-->
 
-            android:name=".Home.HomeActivity"
-            android:exported="false" /> <!-- <activity -->
+<!--            android:name=".Home.HomeActivity"-->
+<!--            android:exported="false" /> &lt;!&ndash; <activity &ndash;&gt;-->
         <!-- android:name=".History.HistoryActivity" -->
         <!-- android:exported="false" /> -->
         <activity android:name=".Detail.DetailActivity" />
@@ -46,7 +46,7 @@
             android:name=".History.HistoryActivity"
             android:exported="false" />
         <activity
-            android:name=".Login.LoginActivity"
+            android:name=".Home.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
