--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,12 @@ dependencies {
 
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+//    binding
+    implementation 'androidx.databinding:databinding-adapters:4.0.1'
+    implementation 'androidx.databinding:databinding-runtime:4.0.1'
+    implementation 'androidx.databinding:databinding-common:4.0.1'
+
+
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.9.0'
